# redfish-exporter

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  __main__.py  compose.yaml  config-localdev.yaml  config.yaml.example  justfile  main.py  prometheus.yaml  pyproject.toml  redfish-exporter.service  renovate.json
.continue/agents/: redfish-exporter.yaml
.continue/rules/: anti-slop.md  dasBaum.md  project-architecture.md  python.md
exporter/: __init__.py  api.py  auth.py  config.py  exporter.py  health.py  main.py  metrics.py  redfish.py  utils.py
tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_health.py  test_metrics.py  test_redfish.py  test_utils.py
tests/mock_server/: README.md  compose.yaml
