[project]
name = "redfish-exporter"
version = "1.0.0"
description = "Read redfish api powerdata"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncio>=4.0.0",
    "pre-commit>=4.5.1",
    "prometheus-client>=0.24.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.14.13",
]
